<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Metric Converter</string>
    <string name="title_home">Home</string>
    <string name="title_tables">Conversion Tables</string>
    <string name="title_info">Extra Info</string>
    <string name="clothing">Clothing Sizes</string>
    <string name="paper">Paper Sizes</string>
    <string name="tyre">Tyre Pressure</string>
    <string name="information">Information</string>
    <string name="names"><![CDATA[Names & Symbols of Units]]></string>
    <string name="units"><![CDATA[Units Multiples & Divisions]]></string>
    <string name="info">The central figure represents either of the two adjacent columns. Example: 1 cm = 0.394 in and 1 in = 2.540 cm</string>
    <string name="shoes">Shoes</string>
    <string name="socks">Socks</string>
    <string name="shirts_size">Shirts (collar size)</string>
    <string name="suits_overcoats"><![CDATA[Men\'s suits & overcoats]]></string>
    <string name="dresses_suits"><![CDATA[Dresses & suits (women)]]></string>
    <string name="sweater"><![CDATA[Women shirts & sweaters]]></string>
    <string name="women_pants">Women Pants (Trousers)</string>
    <string name="men_pants">Men Pants (Trousers)</string>
    <string name="inch">Inches</string>
    <string name="mm">Millimetres</string>
    <string name="size">Size</string>
    <string name="psi">psi (lb/in²)</string>
    <string name="unit">Unit</string>
    <string name="prefix">Prefix</string>
    <string name="symbol">Symbol</string>
    <string name="conversion">Conversion Tables</string>
    <string name="convert_value">Convert </string>
    <string name="enter_number">Enter Number</string>
    <string name="reset">Reset </string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="share_text"><![CDATA[Download the metric info app to assist you in metric & imperial conversions on]]></string>
    <string name="app_link">https://play.google.com/store/apps/details?id=</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="credits">Credits</string>
    <string name="app_info">About Metric Info</string>
    <string name="developer">The Developer</string>
    <string name="dis_content">The user acknowledge that the use of this service is made at their own discretion and risk,
        thus holding Infixus Tech harmless of all liability. Infixus Tech neither holds or is responsible for the content to which
        the user has access through this service. Infixus Tech may not be held liable for any failures in the display of content, Internet connections, viruses, etc. that
        may pose a threat to your device.</string>
    <string name="about_content">Metric Info is an application for Android devices that assist users to compute metric
        or imperial conversions by means of using conversion tables or the calculator functions of the app.
        </string>
    <string name="sla" tools:ignore="TypographyOther">"END-USER LICENSE AGREEMENT FOR METRIC CONVERTER APP
        \nIMPORTANT PLEASE READ THE TERMS AND CONDITIONS OF THIS LICENSE AGREEMENT CAREFULLY
        \nInfixus\' End-User License Agreement ("EULA") is a legal agreement between you (either an individual or a single entity) and Infixus.
        \nInfixus\' software product identified above which may include associated software components, media, printed materials and "online" or electronic document are referred as "SOFTWARE PRODUCT".
        \nBy installing, copying or otherwise using the SOFTWARE PRODUCT, you agree to be bound by the terms of this EULA. This license agreement represents the entire agreement concerning the program between you and Infixus, (referred to as "LICENSE"), and it supersedes any prior proposal, representation, or understanding between parties. If you do not agree to the terms of this EULA do uninstall or do not use the SOFTWARE PRODUCT.
        \nThe SOFTWARE PRODUCT is protected by copyright laws and international copyright treaties, as well as other intellectual property laws and treaties.
        \n1. GRANT OF LICENSE
        \nThe SOFTWARE PRODUCT is licensed as follows:
        \n(a)Installation and Use
        \nInfixus grants you the right to install and use copies of the SOFTWARE PRODUCT on your mobile running a validly licensed copy of the operating system for which the SOFTWARE PRODUCT was designed e.g. Android
        \n2. DESCRIPTION OF OTHER RIGHTS AND LIMITATIONS
        \n(a) Maintenance of Copyright Notices
        \nYou must not remove or alter any copyright notices on any and all copies of the SOFTWARE PRODUCT.
        \n(b) Prohibition on Reverse Engineering, Decompilation, and Disassembly.
        \nYou may not reverse engineer, decompile, or disassemble the SOFTWARE PRODUCT, except and only to the extent that such activity is expressively permitted by applicable law notwithstanding this limitation.
        \n(c) Rental
        \nYou may not rent, lease, or lend the SOFTWARE PRODUCT.
        \n(d) Compliance with Applicable Laws.
        \nYou must comply with all applicable laws regarding use of the SOFTWARE PRODUCT.
        \n3. TERMINATION
        \nWithout prejudice to any other rights, Infixus may terminate this EULA if you fail to comply with the terms and conditions of this EULA. In such event, you must destroy all copies of the SOFTWARE PRODUCT in your possession.
        \n4. COPYRIGHT
        \nAll title including but not limited to copyrights, in and to the SOFTWARE PRODUCT and any copies thereof are owned by Infixus or its suppliers.
        \nAll title and intellectual property rights in and to the content which may be accessed through use of the SOFTWARE PRODUCT is the property of the respective content owner and may be protected by applicable copyright or other intellectual property laws and treaties.
        \nThis EULA grants you no rights to use such content.
        \nAll rights not expressly granted are reserved by Infixus.
        \n5. NO WARRANTIES
        \nInfixus expressly disclaims any warranty for the SOFTWARE PRODUCT. The SOFTWARE PRODUCT is provided "As Is" without any express or implied warranty of any kind, including but not limited to any warranty of any kind, including but not limited to any warranties of merchantability, noninfingement, or fitness of a particular purpose.
        \nInfixus makes no warranties respecting any harm that may be caused by the transmission of a computer virus, worm, time bomb, logic bomb, or other such computer program. Infixus further expressly disclaims any warranty or representation to Authorised Users or to any third party.
        \n6. LIMITATION OF LIABILITY
        \nIn no event shall Infixus be liable for any damages (including, without limitation, lost profits, business interruption, or lost information) rising out of Authorised Users' use of or inability to use the SOFTWARE PRODUCT, even if Infixus has been advised of the possibility of such damages.
        \nIn no event will Infixus be liable for loss of data or for indirect, special, incidental, consequential (including lost profit), or other damages based in contract, tort or otherwise.
        \nInfixus shall have no liability with respect to the content of the SOFTWARE PRODUCT or any part thereof, including but not limited to errors or omissions contained therein, libel, infringements of rights of publicity, privacy, trademark, moral rights or the disclosure of confidential information."</string>
    <string name="dev_content">If you have comments, queries or just want to say hello, give us a buzz on your preferred platform:</string>
    <string name="british">B</string>
    <string name="continental">C</string>
    <string name="_10">10</string>
    <string name="_12">12</string>
    <string name="_38">38</string>
    <string name="_42">42</string>
    <string name="_44">44</string>
    <string name="_46">46</string>
    <string name="_36">36</string>
    <string name="_37">37</string>
    <string name="_39">39</string>
    <string name="_41">41</string>
    <string name="_43">43</string>
    <string name="_8">8</string>
    <string name="_11">11</string>
    <string name="_6">6</string>
    <string name="_95">9½</string>
    <string name="_105">10½</string>
    <string name="_115">11½</string>
    <string name="_38_39">38 – 39</string>
    <string name="_39_40">39 – 40</string>
    <string name="_40_41">40 – 41</string>
    <string name="_41_42">41 – 42</string>
    <string name="_42_43">42 – 43</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_47">47</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="eula">License Agreement</string>
    <string name="policy">Privacy Policy</string>
</resources>