<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.elisvobs.metricinfo.fragment.home.Converter"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_convert" />

    <fragment
        android:id="@+id/navigation_tables"
        android:name="com.elisvobs.metricinfo.fragment.tables.ConversionTables"
        android:label="@string/title_tables"
        tools:layout="@layout/fragment_tables" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.elisvobs.metricinfo.fragment.info.ExtraInfo"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />
</navigation>